Blackpurl/src/objects/Trigger_Soft_Disable__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Disable_Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Undelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Undelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Disable_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Update</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Soft Disable</label>
</CustomObject>